--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
     <!-- Hedaer -->
-     <div class="nav-bar">
-        <a href="#" class="logo">Mosiur Zaman</a>
+    <div class="nav-bar">
+        <a href="#" class="logo">Mosiur Zzaman</a>
         <div class="navigation">
             <div class="nav-items">
                 <a href="">Home</a>
@@ -24,7 +24,7 @@
                 <a href="">Contact Me</a>
             </div>
         </div>
-     </div>
+    </div>
     
 </body>
 </html>
