--- a/index.html
+++ b/index.html
@@ -14,17 +14,40 @@
         <a href="#" class="logo">Mosiur Zzaman</a>
         <div class="navigation">
             <div class="nav-items">
-                <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Education</a>
-                <a href="">Experience</a>
-                <a href="">Projects</a>
-                <a href="">Achievements</a>
-                <a href="">Problem Solving</a>
-                <a href="">Contact Me</a>
+                <a href="#home">Home</a>
+                <a href="#skills">About</a>
+                <a href="#achievements">Education</a>
+                <a href="#experience">Experience</a>
+                <a href="#projects">Projects</a>
+                <a href="#education">Achievements</a>
+                <a href="#problem-solving">Problem Solving</a>
+                <a href="#contact-me">Contact Me</a>
             </div>
         </div>
     </div>
+
+    <!-- home section  -->
+    <section class="home flex-center" id="home">
+        <div class="home-container">
+            <div class="media-icons">
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+            <div class="info">
+                <h2>Hi, I am Mosiur</h2>
+                <h3>Full Stack Developer(Main Focus On Backend)</h3>
+                <p>Software Engineer Intern at Rokomari.com | Programming Instructor | Problem Setter | Specialist at Codeforces | 4* at Codechef</p>
+                <a href="" class="btn">Contact Me<i class="fa-solid fa-circle-arrow-right"></i></a>
+            </div>
+            <div class="home-img">
+                <img src="images/mosiur.JPG" alt="">
+            </div>
+        </div>
+        <a href="#skills" class="scroll-down">Scroll Down <i class="fa-solid fa-circle-arrow-down"></i></a>
+    </section>
     
 </body>
 </html>
