home section update

--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
                 <h2>Hi, I am Mosiur</h2>
                 <h3>Full Stack Developer(Main Focus On Backend)</h3>
                 <p>Software Engineer Intern at Rokomari.com | Programming Instructor | Problem Setter | Specialist at Codeforces | 4* at Codechef</p>
-                <a href="" class="btn">Contact Me<i class="fa-solid fa-circle-arrow-right"></i></a>
+                <div class="contact-resume-div">
+                    <div class="contact-div">
+                        <a href="" class="btn">Contact Me<i class="fa-solid fa-circle-arrow-right"></i></a>
+                    </div>
+                    <div class="resume-div">
+                        <a href="images/Resume of MD. Mosiur Zzaman.pdf" class="btn resume-btn" download>My Resume<i class="fa-solid fa-download"></i></a>
+                    </div>
+                </div>
             </div>
             <div class="home-img">
                 <img src="images/mosiur.JPG" alt="">
